pet management API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 jdbc.url=jdbc:mysql://root:test@localhost:3306/local
+AWS_ACCESS_KEY_ID=AKIAY2N6MOU2IRJHS3FP
+AWS_SECRET_ACCESS_KEY=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
+s3.bucket=mel-test-api-bucket
+s3.client.region=ap-southeast-2
+
+aws.accessKeyId=AKIAY2N6MOU2IRJHS3FP
+aws.secretKey=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
+
+endpoints.beans.id=springbeans
+endpoints.beans.sensitive=false
+endpoints.beans.enabled=false
